_experimental/tests/error_cases.out
3
"hello world"
Runtime error: Runtime error: Undefined variable: undefined-function
  at line 1, column 1
  | ;; Test cases for errors and edge cases
  | ^

Stack trace (depth → operation):
    1 │ <unknown>

Runtime error: Runtime error: + expects integers, got string

